<resources>
    <string name="app_name">TUTTimeTable</string>
    <string name="action_settings">Settings</string>
    <string name="action_init">時間割の初期化</string>
    <string name="action_class_record">休講・補講情報</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="class_name">class</string>
    <string name="place">place</string>
    <string name="title_activity_edit_class">講義情報の編集</string>
    <string name="edit_class_hint_title">科目名</string>
    <string name="edit_class_hint_teacher">教員</string>
    <string name="edit_class_hint_place">教室</string>
    <string name="edit_class_button_ok">OK</string>
    <string name="title_activity_class_record">休講・補講情報</string>
    <string name="class_record_day">日付</string>
    <string name="class_record_period">時限</string>
    <string name="class_record_title">科目</string>
    <string name="class_record_year">年次</string>
    <string name="class_record_course">課程</string>
    <string name="class_record_type">休講/補講</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">基本設定</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_grade">学年</string>
    <string-array name="pref_grade_list_titles">
        <item>未設定</item>
        <item>B1</item>
        <item>B2</item>
        <item>B3</item>
        <item>B4</item>
        <item>M1</item>
        <item>M2</item>
    </string-array>
    <string-array name="pref_grade_list_values">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="pref_title_course">課程</string>
    <string-array name="pref_course_list_titles">
        <item>未設定</item>
        <item>機械</item>
        <item>電気・電子情</item>
        <item>情報・知能</item>
        <item>環境・生命</item>
        <item>建築・都市</item>
    </string-array>
    <string-array name="pref_course_list_values">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="pref_title_notification">通知をしない</string>
    <string name="pref_description_notification">OFFにすると，新しい休講・補講情報の通知を行わなくなります</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_gui">GUI</string>

    <string name="pref_title_timetable">新しい時間割を利用する</string>
    <string name="pref_description_timetable">OFFにすると，旧時間割を利用することができます</string>

    <string name="pref_title_improved_classboard">関連のある休講・補講情報のみを表示する</string>
    <string name="pref_description_improved_classboard">ONにすると，時間割に登録されている講義に対応する休講・補講情報のみを表示します</string>

    <string name="pref_title_improved_timetable">休講・補講情報を時間割に反映する</string>
    <string name="pref_description_improved_timetable">ONにすると，今週の休講・補講情報を時間割に反映します</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_debug">デバッグ</string>

    <string name="pref_title_warnings">致命的でないエラーを無視する</string>
    <string name="pref_description_warnings">OFFにすると，致命的でないエラーを表示するようになります</string>
    <string name="pref_title_background_information">バックグラウンドの情報</string>
    <string name="pref_description_background_information">ONにすると，バックグラウンドプロセスの状態を表示するようになります</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
