<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <SwitchPreference
        android:defaultValue="true"
        android:key="timetable_switch"
        android:summary="@string/pref_description_timetable"
        android:title="@string/pref_title_timetable" />
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="timetable_switch"
        android:key="improved_classboard_switch"
        android:summary="@string/pref_description_improved_classboard"
        android:title="@string/pref_title_improved_classboard" />
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="improved_classboard_switch"
        android:key="improved_timetable_switch"
        android:summary="@string/pref_description_improved_timetable"
        android:title="@string/pref_title_improved_timetable" />

    <ListPreference
        android:defaultValue="180"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <Preference android:title="@string/pref_title_system_sync_settings">
        <intent android:action="android.settings.SYNC_SETTINGS" />
    </Preference>

</PreferenceScreen>
